fix spacing in text

--- a/attestation/css/style0.css
+++ b/attestation/css/style0.css
@@ -3,17 +3,33 @@
   font-size: 2rem;
 }
 
+main {
+  padding: 3.5rem 0;
+}
+
+.blue {
+  color: #2a6099;
+}
+
+h1 {
+  font-size: 2.3rem;
+}
+
+h2 {
+  font-size: 2.15rem;
+}
+
 ul {
   list-style-type: none;
   margin: 0.5rem 0;
   margin-left: 2rem;
 }
 
-.same_line, ul li, .block-0, .block- {
+.same_line, ul li, .block-0, .block-, main {
   display: flex;
 }
 
-.block-0, .block- {
+.block-0, .block-, main {
   flex-direction: column;
 }
 
@@ -23,6 +39,24 @@ ul {
 
 .gap-2 {
   gap: 6rem;
+}
+
+@media (min-width: 1024px) {
+  * {
+    font-size: 1.2rem;
+  }
+  main {
+    margin: 2rem 2rem;
+  }
+  h1 {
+    font-size: 1.7rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  ul {
+    margin-left: 0;
+  }
 }
 
 /*# sourceMappingURL=style0.css.map */
